; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_sjson.c_sjson_encoder_next_value_is_table.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_sjson.c_sjson_encoder_next_value_is_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LUA_TFUNCTION = common dso_local global i64 0, align 8
@LUA_TTABLE = common dso_local global i64 0, align 8
@LUA_TLIGHTFUNCTION = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @sjson_encoder_next_value_is_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sjson_encoder_next_value_is_table(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 10, i32* %3, align 4
  br label %4

4:                                                ; preds = %15, %1
  %5 = load i32*, i32** %2, align 8
  %6 = call i64 @lua_type(i32* %5, i32 -1)
  %7 = load i64, i64* @LUA_TFUNCTION, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %13

9:                                                ; preds = %4
  %10 = load i32, i32* %3, align 4
  %11 = add nsw i32 %10, -1
  store i32 %11, i32* %3, align 4
  %12 = icmp sgt i32 %10, 0
  br label %13

13:                                               ; preds = %9, %4
  %14 = phi i1 [ false, %4 ], [ %12, %9 ]
  br i1 %14, label %15, label %18

15:                                               ; preds = %13
  %16 = load i32*, i32** %2, align 8
  %17 = call i32 @lua_call(i32* %16, i32 0, i32 1)
  br label %4

18:                                               ; preds = %13
  %19 = load i32*, i32** %2, align 8
  %20 = call i64 @lua_type(i32* %19, i32 -1)
  %21 = load i64, i64* @LUA_TTABLE, align 8
  %22 = icmp eq i64 %20, %21
  %23 = zext i1 %22 to i32
  ret i32 %23
}

declare dso_local i64 @lua_type(i32*, i32) #1

declare dso_local i32 @lua_call(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
